--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ color: white;
 
       </div>
       <div class="" style="padding:40px;">
-        <p style="color:white;font-size: 18px;margin-top:60px;"> I have knowlwdge on SEO.I have completed a training from LEDP under govt. project in sylhet ,bangladesh.</br>The training duration was 2month.Lot's of thing i learned from that course.  </p>
+        <p style="color:white;font-size: 18px;margin-top:60px;"> I am pretty good on SEO.I have completed a training from LEDP under govt. project in sylhet ,bangladesh.</br>The training duration was 2month.Lot's of thing i learned from that course.  </p>
 
       </div>
 
