--- a/index.html
+++ b/index.html
@@ -437,10 +437,10 @@ color: white;
 <h2>Connect with through socail media</h2>
 
 <!-- Add font awesome icons -->
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a>
+<a href="https://www.facebook.com/Shahriar009" class="fa fa-facebook"></a>
+<a href="https://twitter.com/m_g_shahriar" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-google"></a>
-<a href="#" class="fa fa-linkedin"></a>
+<a href="https://bd.linkedin.com/in/m-g-shahriar" class="fa fa-linkedin"></a>
 <a href="#" class="fa fa-youtube"></a>
 <a href="#" class="fa fa-instagram"></a>
 
