--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ color: white;
 
                     </div>
 
-                    <img style="border-radius:50%;width:150px;height:150px;border:3px solid #ffff;margin-top:-80px;" src="images/gg.jpg" alt="">
+                    <img style="border-radius:50%;width:150px;height:150px;border:3px solid #ffff;margin-top:-80px;" src="images/gg.jpg" alt="m.g shahriar">
 
                     <h1 style="color:#dee1e5">Mohammad Golam Shahriar</h1>
 
