--- a/index.html
+++ b/index.html
@@ -352,22 +352,20 @@ color: white;
 
               <h3 style="padding:15px;">Image Gallery of android dvelopment</h3>
 
-              <div class="columRow">
-                <div class="f Colum">
-                  <img class="img_class" src="images/androidImage/1.gif" alt="">
+               <div class="columRow row" style="padding:40px;">
+                <div class="f Colum col-md-3">
+                  <img class="img_class" src="images/M_G shahriar_android work 1.jpg" alt="M_G shahriar_android work 1.jpg">
                 </div>
-                <div class="s Colum">
-                  <img class="img_class" src="images/androidImage/2.gif" alt="">
+                <div class="s Colum col-md-3">
+                  <img class="img_class" src="images/M_G shahriar_android work 2.jpg" alt="M_G shahriar_android work 2.jpg">
                 </div>
-                <div class="t Colum">
-                  <img class="img_class" src="images/androidImage/3.gif" alt="">
+                <div class="t Colum col-md-3">
+                  <img class="img_class" src="images/M_G shahriar_android work 3.jpg" alt="M_G shahriar_android work 3.jpg">
                 </div>
-                <div class="fr Colum">
-                  <img class="img_class" src="images/androidImage/4.gif" alt="">
+                <div class="fr Colum col-md-3">
+                  <img class="img_class" src="images/M_G shahriar_android work 4.jpg" alt="M_G shahriar_android work 4.jpg">
                 </div>
-                <div class="fv Colum">
-                  <img class="img_class" src="images/androidImage/4.gif" alt="">
-                </div>
+
               </div>
 
             </div>
