--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ color: white;
           border: 6px solid #c1bfc0;
           }
       </style>
-            <div class="androidDevelopment" style="text-align:center;background:#eaeaeac9">
+            <div class="androidDevelopment col-md-12" style="text-align:center;background:#eaeaeac9">
 
 
               <div>
