--- a/index.html
+++ b/index.html
@@ -371,6 +371,9 @@ color: white;
             </div>
 <!-- NOTE: Android end -->
 
+<div class="col-md-12" style="height:50px;">
+
+</div>
 
     <div class="message" style="padding:60px">
 
