--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-      <div class="container-fluid introSide" style="background:url(images/mainBackground.svg);background-size:cover;height:640px">
+      <div class="container-fluid introSide col-md-12" style="background:url(images/mainBackground.svg);background-size:cover;">
         <div class="row">
 
 
@@ -93,7 +93,7 @@ color: white;
         <div class="col-md-1">
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12">
 
               <div class="introBox" style="width:270px;height:580px;margin:0 auto;text-align:center;">
 
@@ -101,7 +101,7 @@ color: white;
 
                     </div>
 
-                    <img style="border-radius:50%;width:150px;height:150px;border:3px solid #ffff;margin-top:-80px;" src="images/gg.jpg" alt="m.g shahriar">
+                    <img style="border-radius:50%;width:150px;height:150px;border:3px solid #ffff;margin-top:-80px;" src="images/gg.jpg" alt="">
 
                     <h1 style="color:#dee1e5">Mohammad Golam Shahriar</h1>
 
@@ -131,7 +131,7 @@ color: white;
 
 
         </div>
-        <div class="col-md-7" style="padding:100px;color:white">
+        <div class="col-md-7 col-sm-12" style="padding:100px;color:white">
 
           <div class="" style="margin-top:100px;">
 
@@ -175,15 +175,20 @@ color: white;
 
 
         </div>
+
+          <div class="" style="width:100%;height:50px;">
+
+          </div>
+
       </div>
 
 
 
-      <div class="container-fluid" style="background:url(images/webDesign.svg);background-size:cover;height:620px;">
+      <div class="container-fluid col-md-12" style="background:url(images/webDesign.svg);background-size:cover;">
 
 
 
-          <div class="row" style="    background: #506bcc24;height: 620px;">
+          <div class="row" style="    background: #506bcc24;">
 
             <div class="col-md-3" style="">
 
@@ -209,16 +214,16 @@ color: white;
 
             <div class="col-md-12 row" style="padding:60px;">
                 <!-- NOTE: Start -->
-                    <div class="col-md-2">
-                        <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin-right:5px;">
+                    <div class="col-md-2 col-sm-12">
+                        <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
                           <img width="80px" height="90px" src="images/HTML_Logo.png" alt="">
 
                         </div>
                     </div>
                     <!-- NOTE: End -->
                     <!-- NOTE: Start -->
-                        <div class="col-md-2">
-                            <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin-right:5px;">
+                        <div class="col-md-2 col-sm-12">
+                            <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
                               <img width="80px" height="90px" src="images/CSS3.png" alt="">
 
                             </div>
@@ -226,8 +231,8 @@ color: white;
                         <!-- NOTE: End -->
 
                         <!-- NOTE: Start -->
-                            <div class="col-md-2">
-                                <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin-right:5px;">
+                            <div class="col-md-2 col-sm-12">
+                                <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
                                   <img width="80px" height="90px" src="images/bootstrap.png" alt="">
 
                                 </div>
@@ -235,8 +240,8 @@ color: white;
                             <!-- NOTE: End -->
 
                             <!-- NOTE: Start -->
-                                <div class="col-md-2">
-                                    <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin-right:5px;">
+                                <div class="col-md-2 col-sm-12">
+                                    <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
                                       <img width="80px" height="90px" src="images/js-logo.png" alt="">
 
                                     </div>
@@ -244,8 +249,8 @@ color: white;
                                 <!-- NOTE: End -->
 
                                 <!-- NOTE: Start -->
-                                    <div class="col-md-2">
-                                        <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin-right:5px;">
+                                    <div class="col-md-2 col-sm-12">
+                                        <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
                                           <img width="80px" height="90px" src="images/jquery-logo-png--800.gif" alt="">
 
                                         </div>
@@ -254,14 +259,17 @@ color: white;
 
 
                                     <!-- NOTE: Start -->
-                                        <div class="col-md-2">
-                                            <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin-right:5px;">
+                                        <div class="col-md-2 col-sm-12">
+                                            <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
                                               <img width="80px" height="90px" src="images/json.png" alt="">
 
                                             </div>
                                         </div>
                                         <!-- NOTE: End -->
 
+
+            </div>
+            <div class="" style="width:100%;height:50px;">
 
             </div>
 
@@ -277,12 +285,39 @@ color: white;
 
       </div>
 
-      <div class="container-fluid" style="background:url(images/seoBackground.svg);position:relative;padding:100px;text-align:center">
+      <div class="container-fluid col-md-12" style="background:url(images/seoBackground.svg);position:relative;padding:100px;text-align:center">
 
         <div class="smallBox" style="position: absolute;top:0;width:100px;height:100px;background:#e13389;left:0px;">
 
 
         </div>
+
+        <style media="screen">
+
+          .seoSS{
+            border-right:1px solid #fff;
+          }
+          .seoSs{
+                  padding:40px;
+          }
+          @media (max-width:720PX) {
+
+                  .seoSS{
+                    border-right:0px solid black;
+                    border-bottom:1px solid #fff;
+
+                    margin-bottom: 10px;
+
+                  }
+
+                  .seoSs{
+                        padding:0px;
+
+                  }
+
+
+          }
+        </style>
 
       <div class="">
 
@@ -292,12 +327,12 @@ color: white;
 
       <div class="row" style="margin-top:100px;">
 
-        <div class="col-md-4" style="color:white;border-right:1px solid #fff">
+        <div class="col-md-4 seoSS" style="color:white;">
 
             <h1>On-page seo</h1>
             <p style="">Full technical seo implementation</p>
         </div>
-        <div class="col-md-4" style="color:white;border-right:1px solid #fff">
+        <div class="col-md-4 seoSS" style="color:white;">
           <h1>Off-page seo</h1>
           <p>High quality backlink with .edu and high PR website </p>
         </div>
@@ -314,7 +349,7 @@ color: white;
           </div>
 
       </div>
-      <div class="" style="padding:40px;">
+      <div class="seoSs" style="">
         <p style="color:white;font-size: 18px;margin-top:60px;"> I have knowlwdge on SEO.I have completed a training from LEDP under govt. project in sylhet ,bangladesh.</br>The training duration was 2month.Lot's of thing i learned from that course.  </p>
 
       </div>
@@ -337,7 +372,7 @@ color: white;
           border: 6px solid #c1bfc0;
           }
       </style>
-            <div class="androidDevelopment col-md-12" style="text-align:center;background:#eaeaeac9">
+            <div class="androidDevelopment col-md-12" style="text-align:center;background:#eaeaeac9;display:block">
 
 
               <div>
@@ -352,7 +387,7 @@ color: white;
 
               <h3 style="padding:15px;">Image Gallery of android dvelopment</h3>
 
-               <div class="columRow row" style="padding:40px;">
+              <div class="columRow row" style="padding:40px;">
                 <div class="f Colum col-md-3">
                   <img class="img_class" src="images/M_G shahriar_android work 1.jpg" alt="M_G shahriar_android work 1.jpg">
                 </div>
@@ -371,18 +406,45 @@ color: white;
             </div>
 <!-- NOTE: Android end -->
 
+
+<!-- NOTE: Photoshop -->
+
+
+
+      <div class="container-fluid col-md-12" style="background:url(images/clouds-cloudporn-weather-lookup-.jpeg) center center fixed; background-size:cover;height:649px;">
+
+
+                <h3 style="margin-top: 40px;font-size: 6rem;font-family: shariarFont;color:white;">Photoshop</h3>
+
+                <h4 style="margin-top: -20px;font-size: 2rem;font-family: shariarFont;color:white;border-bottom:2px solid white;width:300px;">My work sample on graphics</h4>
+
+
+
+
+
+      </div>
+
+
+
+<!-- NOTE: Photoshop -->
+
+
+
+
+
 <div class="col-md-12" style="height:50px;">
 
 </div>
+    <div class="message" style="padding:60px;">
 
-    <div class="message" style="padding:60px">
-
-          <h3>Dear Mr./Mrs,</h3>
+          <h3 style="">Dear Mr./Mrs,</h3>
 
 <p style="font-size:19px;">My name is Mohammad Golam Shahriar. Thank you for the opportunity to apply for the aforementioned at your company. After reviewing your job description, it’s clear that you’re looking for a candidate that is extremely familiar with the     responsibilities associated with the role, and can perform them confidently. Given these requirements, I am certain that I have the necessary skills to  successfully do the job adeptly and perform above expectations.    I finished my graduation in computer science from sylhet international university .My total cgpa is 3.31.I am not a very well gpa holder student but i can assure thaticouldbeaadroitemployeeinyouroffice.Throughout my academic career,  I was consistently praised as by my professors and peers. While working on academic and extracurricular projects, I developed and proven my skill on Web design and develop Androids Apps Developing,Python language,Basic   Wordpress,Wordpress ecommerce maintenance and Photoshop skills which I  hope to leverage into the jobs at your company. If i need more knack then i will prepare myself with intensive passionate most importantly, i am quick learner.
   After reviewing my resume,I hope you will agree that I am the type of competent and competitive candidate you are looking for. I look forward to elaborating on how my specific skills and abilities will benefit your organization.Please contact  me at 01988470701 or via email at shahriar01833@gmail.com to arrange for a convenient meeting time.    Thank you for your consideration, and I look forward to hearing from you soon.</p>
 
     </div>
+
+
 
 <!-- NOTE: Social profile -->
 
@@ -438,10 +500,10 @@ color: white;
 <h2>Connect with through socail media</h2>
 
 <!-- Add font awesome icons -->
-<a href="https://www.facebook.com/Shahriar009" class="fa fa-facebook"></a>
-<a href="https://twitter.com/m_g_shahriar" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-google"></a>
-<a href="https://bd.linkedin.com/in/m-g-shahriar" class="fa fa-linkedin"></a>
+<a href="#" class="fa fa-linkedin"></a>
 <a href="#" class="fa fa-youtube"></a>
 <a href="#" class="fa fa-instagram"></a>
 
