--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -214,8 +215,8 @@ color: white;
 
             <div class="col-md-12 row" style="padding:60px;">
                 <!-- NOTE: Start -->
-                    <div class="col-md-2 col-sm-12">
-                        <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
+                    <div class="col-md-2 col-sm-12" style="text-align:center;">
+                        <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;margin:0 auto;margin-bottom:3px;">
                           <img width="80px" height="90px" src="images/HTML_Logo.png" alt="">
 
                         </div>
@@ -223,7 +224,7 @@ color: white;
                     <!-- NOTE: End -->
                     <!-- NOTE: Start -->
                         <div class="col-md-2 col-sm-12">
-                            <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
+                            <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;margin:0 auto;margin-top:5px;">
                               <img width="80px" height="90px" src="images/CSS3.png" alt="">
 
                             </div>
@@ -232,7 +233,7 @@ color: white;
 
                         <!-- NOTE: Start -->
                             <div class="col-md-2 col-sm-12">
-                                <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
+                                <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;margin:0 auto;margin-top:5px;">
                                   <img width="80px" height="90px" src="images/bootstrap.png" alt="">
 
                                 </div>
@@ -241,7 +242,7 @@ color: white;
 
                             <!-- NOTE: Start -->
                                 <div class="col-md-2 col-sm-12">
-                                    <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
+                                    <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;margin:0 auto;margin-top:5px;">
                                       <img width="80px" height="90px" src="images/js-logo.png" alt="">
 
                                     </div>
@@ -250,7 +251,7 @@ color: white;
 
                                 <!-- NOTE: Start -->
                                     <div class="col-md-2 col-sm-12">
-                                        <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
+                                        <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;margin:0 auto;margin-top:5px;">
                                           <img width="80px" height="90px" src="images/jquery-logo-png--800.gif" alt="">
 
                                         </div>
@@ -260,7 +261,7 @@ color: white;
 
                                     <!-- NOTE: Start -->
                                         <div class="col-md-2 col-sm-12">
-                                            <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;">
+                                            <div class=""  style="width:160px;background:#ffffff69;height:150px;text-align:center;padding:25px;margin:5px;margin:0 auto;margin-top:5px;">
                                               <img width="80px" height="90px" src="images/json.png" alt="">
 
                                             </div>
@@ -314,6 +315,7 @@ color: white;
                         padding:0px;
 
                   }
+                  
 
 
           }
@@ -322,7 +324,7 @@ color: white;
       <div class="">
 
               <h1 style="shariarFont;color:#e13389;text-align:center;font-size:6rem;" >SEO</h1>
-              <p style="text-align:center;color:white">I am doing seo for 1 years. Currently working as a seo expert in a offshore company.</p>
+              <p style="text-align:center;color:white">I have been doing seo for 1 years. Currently working as a seo expert in a offshore company.</p>
       </div>
 
       <div class="row" style="margin-top:100px;">
@@ -367,12 +369,11 @@ color: white;
 
       <style media="screen">
       .androidDevelopment img{
-          width: 200px;
-          height: 300px;
+
           border: 6px solid #c1bfc0;
           }
       </style>
-            <div class="androidDevelopment col-md-12" style="text-align:center;background:#eaeaeac9;display:block">
+            <div class="androidDevelopment col-md-12" style="text-align:center;background:#eaeaeac9;display:block;background:url(images/backgroundDSS.svg) center center;background-size:cover;">
 
 
               <div>
@@ -387,19 +388,61 @@ color: white;
 
               <h3 style="padding:15px;">Image Gallery of android dvelopment</h3>
 
-              <div class="columRow row" style="padding:40px;">
-                <div class="f Colum col-md-3">
-                  <img class="img_class" src="images/M_G shahriar_android work 1.jpg" alt="M_G shahriar_android work 1.jpg">
+                  <style media="screen">
+                  .box{
+                      margin-top:150px;
+                      background : transparent;
+
+                      position : relative;
+                      transform : rotate(-30deg) skew(25deg) scale(.8);
+                      transition : 0.5s;
+
+                      }
+                      .box img {
+                                position : absolute;
+                                width:240px;
+                                 transition : 0.5s;
+
+                              }
+                              .box:hover img:nth-child(3){
+                                            transform:translate(100px,-100px);
+                                            opacity:1;
+                                          }
+                                          .box:hover img:nth-child(2){
+                                            transform:translate(80px,-90px);
+                                            opacity:.6;
+                                          }
+                                          .box:hover img:nth-child(1){
+                                            transform:translate(60px,-60px);
+                                            opacity:.4;
+                                          }
+                  </style>
+
+              <div class="columRow row col-md-12" style="margin-left:-270px">
+                <div class="box f Colum col-md-3">
+                  <img class="img img_class" src="images/M_G shahriar_android work 1.jpg" alt="M_G shahriar_android work 1.jpg">
+                  <img class="img img_class" src="images/M_G shahriar_android work 1.jpg" alt="M_G shahriar_android work 1.jpg">
+                  <img class="img img_class" src="images/M_G shahriar_android work 1.jpg" alt="M_G shahriar_android work 1.jpg">
                 </div>
-                <div class="s Colum col-md-3">
+                <div class="box s Colum col-md-3">
+                  <img class="img_class" src="images/M_G shahriar_android work 2.jpg" alt="M_G shahriar_android work 2.jpg">
+                  <img class="img_class" src="images/M_G shahriar_android work 2.jpg" alt="M_G shahriar_android work 2.jpg">
                   <img class="img_class" src="images/M_G shahriar_android work 2.jpg" alt="M_G shahriar_android work 2.jpg">
                 </div>
-                <div class="t Colum col-md-3">
+                <div class="box t Colum col-md-3">
+                  <img class="img_class" src="images/M_G shahriar_android work 3.jpg" alt="M_G shahriar_android work 3.jpg">
+                  <img class="img_class" src="images/M_G shahriar_android work 3.jpg" alt="M_G shahriar_android work 3.jpg">
                   <img class="img_class" src="images/M_G shahriar_android work 3.jpg" alt="M_G shahriar_android work 3.jpg">
                 </div>
-                <div class="fr Colum col-md-3">
+                <div class="box fr Colum col-md-3">
+                  <img class="img_class" src="images/M_G shahriar_android work 4.jpg" alt="M_G shahriar_android work 4.jpg">
+                  <img class="img_class" src="images/M_G shahriar_android work 4.jpg" alt="M_G shahriar_android work 4.jpg">
                   <img class="img_class" src="images/M_G shahriar_android work 4.jpg" alt="M_G shahriar_android work 4.jpg">
                 </div>
+
+              </div>
+
+              <div class="col-md-12" style="height:250px;">
 
               </div>
 
@@ -411,18 +454,49 @@ color: white;
 
 
 
-      <div class="container-fluid col-md-12" style="background:url(images/clouds-cloudporn-weather-lookup-.jpeg) center center fixed; background-size:cover;height:649px;">
+      <div class="container-fluid col-md-12" style="background:url(images/clouds-cloudporn-weather-lookup-.jpeg) center center fixed; background-size:cover;">
 
 
-                <h3 style="margin-top: 40px;font-size: 6rem;font-family: shariarFont;color:white;">Photoshop</h3>
+                <h3 style="margin-top: 20px;font-size: 6rem;font-family: shariarFont;color:white;">Photoshop</h3>
 
                 <h4 style="margin-top: -20px;font-size: 2rem;font-family: shariarFont;color:white;border-bottom:2px solid white;width:300px;">My work sample on graphics</h4>
 
+      <div class="row col-md-12"  style="">
 
+        <div style="text-align:center;margin:0 auto;margin-top:10px;"  id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="images/photoshop/f.png" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/photoshop/latesign.png" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/photoshop/samll_first_page_jp_blur.jpg" alt="Third slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/photoshop/Sicon.jpg" alt="Third slide">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+
+
+      </div>
 
 
 
       </div>
+
+  <p style="margin-top:10px; bottom:5px;text-align:center;padding:30px;color:white;font-size:17px;">Basic simple design on my photoshop working. I can design logo cover pic, website background materrial design and psd to svg</p>
+
+</div>
 
 
 
@@ -511,6 +585,7 @@ color: white;
   </div>
 
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
 </html>
