--- a/index.html
+++ b/index.html
@@ -466,10 +466,10 @@ color: white;
         <div style="text-align:center;margin:0 auto;margin-top:10px;"  id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="images/photoshop/f.png" alt="First slide">
+                        <img class="d-block w-100" src="images/photoshop/app71.png" alt="First slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="images/photoshop/latesign.png" alt="Second slide">
+                        <img class="d-block w-100" src="images/photoshop/app71_2.png" alt="Second slide">
                       </div>
                       <div class="carousel-item">
                         <img class="d-block w-100" src="images/photoshop/samll_first_page_jp_blur.jpg" alt="Third slide">
